--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -1,21 +1,48 @@
 .page-title {
-  padding-top: 2rem;
   color: white;
+  padding-top: 3rem;
 }
 
 .button,
 .text-field {
   padding: 1rem;
   border-radius: 0.25rem;
-  padding-top: 1rem;
 }
 
 .button {
-  background-color: palegreen;
-  margin-bottom: 3rem;
+  background-color: lightgray;
 }
 
-.search-input-group {
+.search-input-group::before {
   background: url("https://renwerks.com/wp-content/uploads/2018/09/straits-kitchen-cover3.png");
   background-size: cover;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  z-index: -2;
+  opacity: 0.85;
+}
+
+.search-input-group::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+@media (max-width: 991.98px) {
+  .search-input-group::before {
+    height: 50%;
+  }
+  .button,
+  .text-field {
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+  }
 }
