--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -23,23 +23,25 @@
   width: 100%;
   height: 30%;
   z-index: -2;
-  opacity: 0.85;
 }
 
 .search-input-group::after {
+  background: rgba(0, 0, 0, 0.5);
   content: "";
   position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100%;
+  height: 30%;
   z-index: -1;
 }
 
 @media (max-width: 991.98px) {
-  .search-input-group::before {
+  .search-input-group::before,
+  .search-input-group::after {
     height: 50%;
   }
+
   .button,
   .text-field {
     padding: 0.5rem;
