--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -21,7 +21,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 30%;
+  height: 300px;
   z-index: -2;
 }
 
@@ -32,14 +32,14 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 30%;
+  height: 300px;
   z-index: -1;
 }
 
 @media (max-width: 991.98px) {
   .search-input-group::before,
   .search-input-group::after {
-    height: 50%;
+    height: 70%;
   }
 
   .button,
