--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -11,6 +11,7 @@
 
 .button {
   background-color: lightgray;
+  margin-bottom: 2rem;
 }
 
 .search-input-group::before {
@@ -21,7 +22,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 200px;
   z-index: -2;
 }
 
@@ -32,7 +33,7 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 300px;
+  height: 200px;
   z-index: -1;
 }
 
