added in footer with content

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,8 +1,17 @@
-.test1 {
+.footer {
   height: 175px;
   background-color: black;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.badge {
-  padding-top: 3.5rem;
+.footer-author {
+  color: white;
+  flex-basis: 100%;
+}
+
+.footer a {
+  color: white;
 }
