--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -1,4 +1,13 @@
-.test {
+.recipes-section {
   background-color: white;
   min-height: 65vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 50px;
+  grid-row-gap: 20px;
+  margin: 100px auto;
+}
+
+.card {
+  border: none;
 }
