--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -14,34 +14,22 @@
   margin-bottom: 2rem;
 }
 
-.search-input-group::before {
-  background: url("https://renwerks.com/wp-content/uploads/2018/09/straits-kitchen-cover3.png");
+.search-input-group {
+  background-image: 
+    /* top, transparent red */ linear-gradient(
+      rgba(20, 20, 20, 0.5),
+      rgba(20, 20, 20, 0.5)
+    ),
+    /* your image */
+      url("https://renwerks.com/wp-content/uploads/2018/09/straits-kitchen-cover3.png");
   background-size: cover;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 200px;
-  z-index: -2;
-}
-
-.search-input-group::after {
-  background: rgba(0, 0, 0, 0.5);
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 200px;
-  z-index: -1;
 }
 
 @media (max-width: 991.98px) {
-  .search-input-group::before,
+  /* .search-input-group::before,
   .search-input-group::after {
-    height: 70%;
-  }
+    height: 60%;
+  } */
 
   .button,
   .text-field {
