--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -11,3 +11,10 @@
 .card {
   border: none;
 }
+
+/* @media (max-width: 991.98px) {
+  .recipes-section {
+    min-height: 0;
+    display: block;
+  }
+} */
